2019-03-31 James Phillips <james@jamesphillipsuk.com>
	*main.c: Modified initialiseTextFile() for memory efficiency.
	Modified rewriteFile() so it doesn't close NCurses and hide our output until we give it a character.
	Minor alterations to comments and code cleanliness.
	Modified getFileContents() so it doesn't get null data before the start of the file, or crash at the end.
	Implemented input checking to save inputted text to a file - because recognition of the control modifier from NCURSES caused some runtime errors, I'm using F1 and F2 for save and exit respectively.  I've updated this in the How To notice as well.
	Added Backspace functionality, using NCurses KEY_BACKSPACE and an alternative value which - together - should work for most keyboards.

	*CHANGELOG: Documented recent changes.

2019-03-31 James Phillips <james@jamesphillipsuk.com>
	*main.c: Included ncurses.h for the text editing interface.
	Implemented NCurses in the rewriteFile() function.
	Renamed printFile() to getFileContents() - it no longer needs to print the file, but it does still need to get the file's contents.
	Moved file content printing to rewriteFile() as it can do so via NCurses, I'll probably separate this out again later.
	Removed auto-filling files with Hello World message as I'm preparing to do the function to allow users to write a message.

	*CHANGELOG: Documented recent changes.

2019-03-29 James Phillips <james@jamesphillipsuk.com>
	*main.c: printFile() now uses our textFile, and nothing is printed directly to the screen from the file without being saved in the textFile first.
	Aviate now takes argv parameters from the user regardless of whether or not they capitalise the first letter.
	Moved the declaration of the textFile used when reading a file, so it can be used for altering a file as well.
	Done the same for when writing a file.
	Created function saveFile() for saving a file.  Not yet implemented.
	Began to frame out how rewriteFile() will be used.